Fix section spacing

--- a/pages/index/index.module.scss
+++ b/pages/index/index.module.scss
@@ -23,7 +23,8 @@
   @include breakpoint(lg) {
     max-width: 1200px;
     margin: 0 auto;
-    padding: 0;
+    padding-left: 0;
+    padding-right: 0;
   }
 }
 
